# Exercise_4

./: CMakeLists.txt
headers/: IDCompare.h  Inputs.h  Movie.h  Producer.h  Professionals.h  Screenwriter.h
src/: Actor.cpp  Actor.h  AgeCompare.cpp  AgeCompare.h  Cinema.cpp  Cinema.h  CntrCompare.cpp  CntrCompare.h  Director.cpp  Director.h  IDCompare.cpp  IDCompare.h  Inputs.cpp  Inputs.h  Movie.cpp  Movie.h  Producer.cpp  Producer.h  Professionals.cpp  Professionals.h  Screenwriter.cpp  Screenwriter.h  TCP.cpp  TCP.h  TCPServer.cpp  TCPServer.h  UDP.cpp  UDP.h  UDPServer.cpp  UDPServer.h  main.cpp  makefile  udpTcpParent.cpp  udpTcpParent.h
src/All Clients/: TCP.cpp  TCP.h  TCPClient.cpp  TCPClient.h  UDP.cpp  UDP.h  UDPClient.cpp  UDPClient.h  main.cpp  makefile  udpTcpParent.cpp  udpTcpParent.h
src/UDP Client/: TCP.cpp  TCP.h  TCPClient.cpp  TCPClient.h  UDP.cpp  UDP.h  UDPClient.cpp  UDPClient.h  main.cpp  mainUDPClient.cpp  makefile  udpTcpParent.cpp
